terraform-1/udemy/ex_13/internet_gateway.tf
# Defining our internet gateway

resource "aws_internet_gateway" "main-igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "main-igw"
  }
}
