terraform-1/udemy/ex_13/vpc.tf
# Defining our VPC in Singapore region (ap-southeast-1)

resource "aws_vpc" "main" {
  cidr_block            = "10.0.0.0/16"
  instance_tenancy      = "default"
  enable_dns_support    = "true"
  enable_dns_hostnames  = "true"
  enable_classiclink    = "false"
  tags                  = {
    Name                = "main-vpc"
  }
}
